--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -15,16 +15,16 @@
     />
 
     <!-- styles -->
-    <link rel="stylesheet" href="/componentes/fonts/fonts.css" />
-    <link rel="stylesheet" href="/componentes/header/header.css" />
-    <link rel="stylesheet" href="/componentes/form/form.css" />
-    <link rel="stylesheet" href="/componentes/footer/footer.css" />
+    <link rel="stylesheet" href="./componentes/fonts/fonts.css" />
+    <link rel="stylesheet" href="./componentes/header/header.css" />
+    <link rel="stylesheet" href="./componentes/form/form.css" />
+    <link rel="stylesheet" href="./componentes/footer/footer.css" />
     <link rel="stylesheet" href="./contacto.css" />
 
     <!-- scripts -->
-    <script defer src="/componentes/header/header.js"></script>
-    <script defer src="/componentes/form/form.js"></script>
-    <script defer src="/componentes/footer/footer.js"></script>
+    <script defer src="./componentes/header/header.js"></script>
+    <script defer src="./componentes/form/form.js"></script>
+    <script defer src="./componentes/footer/footer.js"></script>
     <script defer src="./contacto.js"></script>
 
     <title>Contacto | NAHUEL</title>
