--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -16,14 +16,14 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="/componentes/fonts/fonts.css" />
-    <link rel="stylesheet" href="/componentes/header/header.css" />
-    <link rel="stylesheet" href="/componentes/footer/footer.css" />
+    <link rel="stylesheet" href="./componentes/fonts/fonts.css" />
+    <link rel="stylesheet" href="./componentes/header/header.css" />
+    <link rel="stylesheet" href="./componentes/footer/footer.css" />
     <link rel="stylesheet" href="./portfolio.css" />
 
     <!-- SCRIPTS -->
-    <script defer src="/componentes/header/header.js"></script>
-    <script defer src="/componentes/footer/footer.js"></script>
+    <script defer src="./componentes/header/header.js"></script>
+    <script defer src="./componentes/footer/footer.js"></script>
     <script defer src="./portfolio.js"></script>
 
     <title>Portfolio | NAHUEL</title>
