--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="./componentes/header/header.css" />
     <link rel="stylesheet" href="./componentes/form/form.css" />
     <link rel="stylesheet" href="./componentes/footer/footer.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <!-- scripts -->
     <script defer src="./componentes/header/header.js"></script>
     <script defer src="./componentes/form/form.js"></script>
     <script defer src="./componentes/footer/footer.js"></script>
-    <script defer src="./index.js"></script>
+    <script defer src="./scripts/index.js"></script>
 
     <title>Home | NAHUEL</title>
   </head>
