--- a/portfolio.html
+++ b/portfolio.html
@@ -16,15 +16,15 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="./componentes/fonts/fonts.css" />
-    <link rel="stylesheet" href="./componentes/header/header.css" />
-    <link rel="stylesheet" href="./componentes/footer/footer.css" />
+    <link rel="stylesheet" href="../componentes/fonts/fonts.css" />
+    <link rel="stylesheet" href="../componentes/header/header.css" />
+    <link rel="stylesheet" href="../componentes/footer/footer.css" />
     <link rel="stylesheet" href="./styles/portfolio.css" />
 
     <!-- SCRIPTS -->
-    <script defer src="./componentes/header/header.js"></script>
-    <script defer src="./componentes/footer/footer.js"></script>
-    <script defer src="./portfolio.js"></script>
+    <script defer src="../componentes/header/header.js"></script>
+    <script defer src="../componentes/footer/footer.js"></script>
+    <script defer src="./scripts/portfolio.js"></script>
 
     <title>Portfolio | NAHUEL</title>
   </head>
