--- a/servicios.html
+++ b/servicios.html
@@ -16,15 +16,15 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="./componentes/fonts/fonts.css" />
-    <link rel="stylesheet" href="./componentes/header/header.css" />
-    <link rel="stylesheet" href="./componentes/footer/footer.css" />
-    <link rel="stylesheet" href="./servicios.css" />
+    <link rel="stylesheet" href="../componentes/fonts/fonts.css" />
+    <link rel="stylesheet" href="../componentes/header/header.css" />
+    <link rel="stylesheet" href="../componentes/footer/footer.css" />
+    <link rel="stylesheet" href="./styles/servicios.css" />
 
     <!-- SCRIPTS -->
-    <script defer src="./componentes/header/header.js"></script>
-    <script defer src="./componentes/footer/footer.js"></script>
-    <script defer src="./servicios.js"></script>
+    <script defer src="../componentes/header/header.js"></script>
+    <script defer src="../componentes/footer/footer.js"></script>
+    <script defer src="./scripts/servicios.js"></script>
 
     <title>Servicios | NAHUEL</title>
   </head>
